--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,29 @@
-.pdf-toolbar {
+.pdf-writer-toolbar {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
 	padding: 5px;
-	background-color: #2e2e2e;
-	color: white;
-	border-bottom: 1px solid #444;
+	background-color: var(--background-secondary);
+	color: var(--text-normal);
+	border-bottom: 1px solid var(--background-modifier-border);
 	z-index: 1000;
 	gap: 0.5rem;
 	margin-right: 1rem;
 }
 
-.pdf-toolbar-button {
+.pdf-writer-toolbar-button {
 	margin: 0 5px;
 	padding: 5px 10px;
-	background-color: #444;
-	color: white;
+	background-color: var(--interactive-normal);
+	color: var(--text-normal);
 	border: none;
 	border-radius: 3px;
 	cursor: pointer;
 }
 
-.pdf-toolbar-button:hover {
-	background-color: #555;
+.pdf-writer-toolbar-button:hover {
+	background-color: var(--interactive-hover);
 }
-
 
 /* Styles for the color picker */
 .pdf-text-color-picker {
@@ -33,12 +32,7 @@
 	border: 1px solid #ccc;
 	border-radius: 4px;
 }
-.pdf-toolbar-icon {
-	width: 16px;
-	height: 16px;
-	vertical-align: middle;
-}
-.text-overlay {
+.pdf-writer-text-overlay {
 	z-index: 10;
 	pointer-events: auto;
 	font-size: 14px;
@@ -57,20 +51,20 @@
 }
 
 /* Styles for the text overlay when editing */
-.pdf-text-overlay-editing {
+.pdf-writer-text-overlay-editing {
 	border: 2px dashed #0078d7;
 	background-color: rgba(255, 255, 255, 0.8);
 	cursor: text !important;
 	user-select: text !important;
 }
-.pdf-text-overlay-finalize-editing {
+.pdf-writer-text-overlay-finalize-editing {
 	border: none;
 	background-color: transparent;
 	padding: 0;
 	cursor: move !important;
 }
 
-.delete-button {
+.pdf-writer-delete-button {
 	position: absolute;
 	top: -20px; /* Ajuste selon ton design */
 	right: -20px; /* Ajuste selon ton design */
@@ -90,24 +84,24 @@
 	line-height: 1; /* Empêcher tout décalage */
 }
 
-.delete-button:hover {
+.pdf-writer-delete-button:hover {
 	transform: scale(1.2); /* Agrandir légèrement au survol */
 	box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3); /* Augmenter l'ombre */
 	background: #ff0000; /* Couleur rouge plus vive */
 }
 
-.delete-button:active {
+.pdf-writer-delete-button:active {
 	transform: scale(1); /* Réduction lors du clic */
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Ombre réduite */
 }
 
 /* Classe pour masquer le bouton */
-.pdf-delete-button-hidden {
+.pdf-writer-delete-button-hidden {
 	display: none;
 }
 
 /* Classe pour afficher le bouton */
-.pdf-delete-button-visible {
+.pdf-writer-delete-button-visible {
 	display: block;
 }
 /* Classes pour les tailles de police */
